--- a/app/src/main/res/menu/user_options_menu.xml
+++ b/app/src/main/res/menu/user_options_menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <Separator/>
-    <!--CenteredText android:title="@string/grxs_title_rom_app_info_options" android:checked="true"/>
+    <CenteredText android:title="@string/grxs_title_rom_app_info_options" android:checked="true"/>
     <Separator/>
 
     <TextWithBadge
@@ -18,7 +18,7 @@
         android:checkable="false"
         app:badgeText=">"
         />
-    <Separator/-->
+    <Separator/>
     <CenteredText android:title="@string/grxs_title_theming_options" android:checked="true"/>
     <Separator/>
 
