--- a/app/src/main/res/values/values-rom.xml
+++ b/app/src/main/res/values/values-rom.xml
@@ -5,11 +5,13 @@
 
 
     <string-array name="rom_tabs_names"> <!-- do not change this array name !!!! -->
-        <item>Rom Info</item>
+        <item>@string/general_info</item>
+        <item>@string/changelog</item>
     </string-array>
 
     <string-array name="rom_tabs_layouts"> <!-- do not change this array name !!!! -->
         <item>rom_info_tab</item>
+        <item>changelog_item</item>
     </string-array>
 
 
