--- a/app/src/main/res/layout/rom_info_tab.xml
+++ b/app/src/main/res/layout/rom_info_tab.xml
@@ -36,7 +36,7 @@
                         android:layout_width="36dp"
                         android:layout_height="36dp"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/demo_xda" />
+                        android:src="@drawable/xda" />
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
@@ -59,7 +59,7 @@
                         android:layout_width="36dp"
                         android:layout_height="36dp"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/htc"
+                        android:src="@drawable/htcmania"
                          />
                     <TextView
                         android:layout_width="wrap_content"
@@ -107,7 +107,7 @@
                         android:layout_width="36dp"
                         android:layout_height="36dp"
                         android:layout_gravity="center_vertical"
-                        android:src="@drawable/telegram"
+                        android:src="@drawable/telegram_esp"
                         />
                     <TextView
                         android:layout_width="wrap_content"
